--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -35,9 +35,9 @@
 
 - title: Firmenkontaktbörse FSU Jena
   description: We are exhibiting at this event.
-  link: https://www.stellenwerk-jobmesse.de/hamburg/
+  link: http://www.sft.uni-jena.de/Firmenkontaktboerse.html
   date: 5. Jun 2019
-  time: 
+  time:
   address: Friedrich-Schiller-Universität Jena<br>Fürstengraben 1<br>07743 Jena
 
 - title: Firmenkontaktmesse FH Wedel
