--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -448,6 +448,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: tschlueter
+  name: Tobias S.
+  full_name: Tobias Schlüter
+  description: is a Software Engineer who values pair programming and customer-centric software development.
+  image: tschlueter.jpg
+
 - id: thaapakoski
   name: Timo
   full_name: Timo Haapakoski
