--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -8,9 +8,9 @@
   description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
   location: Hamburg / Jena
 
-- title: UX Data Analyst
-  link: https://epages.com/en/career/?jh=nsu347w4nlspwko88l766ippaq8kek9
-  description: As part of our UX team you have an overview of the data sources of all products, and will be responsible for the feedback management.
+- title: Ruby Developer
+  link: https://epages.com/en/career/?jh=3r12t9pp853d18z17601z39yc7tzgqs
+  description: Together with Scrum Master and Product Owner, you are responsible for the development and maintenance of our crucial in-house tools.
   location: Hamburg
 
 - title: Quality Assurance Engineer
