Add first draft

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -36,3 +36,14 @@
 
     - title: Toast messages
       link: beyond-essence/inventory/toast-messages.md
+
+- title: Help center
+  entries:
+    - title: Design & formatting
+      link: beyond-essence/help-center/design.md
+
+    - title: Structure & language
+      link: beyond-essence/help-center/structure-content.md
+
+    - title: Language peculiarities
+      link: beyond-essence/help-center/languages.md
