--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -193,7 +193,7 @@
 - id: gsanemeterio
   name: German
   full_name: German
-  description: is a Ruby on Rails Developer. He love to learn new technologies and playing videogames.
+  description:  is a JavaScript Developer who is now into Ruby on Rails is a Ruby on Rails Developer. He is fond of video games and mangas, He love to learn new technologies and the new challenges
   image: avatar_male.jpg
 
 - id: hahnert
