--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -5,7 +5,7 @@
 
 - title: (Mid-level) JavaScript Engineer
   link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
-  description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
+  description: You will support us building a highly user interactive web app that is easy to scale, to extend, and all modular in a responsive environment. 
   location: Hamburg / Jena
 
 - title: Ruby Developer
@@ -15,7 +15,7 @@
 
 - title: Quality Assurance Engineer
   link: https://epages.com/en/career/?jh=b5omuicu10n5l3ht9qk41cx4ke28ppr
-  description: You will responsible for assuring excellent quality and usability of our next generation ecommerce platform for SMBs.
+  description: You will be responsible for assuring excellent quality and usability of our next generation ecommerce platform for SMBs.
   location: Hamburg
 
 - title: User Experience Manager
