add social icons

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ url: https://developer.epages.com
 twitter_username: epagesdevs
 github_username: ePages-de
 youtube_username: UCI5hX9kgUGFnYpfxZYxlP0Q
+linkedin_username: epages
+xing_username: epagesgmbh
 
 markdown: kramdown
 
