--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,20 +1,14 @@
-- title: DevOps Gathering
-  link: https://devops-gathering.io/
-  date: 11.-13. Mar 2019
-  time:
-  address: Zentrum für IT Sicherheit<br>Lise-Meitner-Allee 4<br>44801 Bochum
-
-- title: HackerX (Backend)
-  link:
-  date: 27. Mar 2019
-  time: '19:00 - 22:00'
-  address: Kreditech<br>Ludwig-Erhard-Str. 1, 8th floor<br>20453 Hamburg
-
 - title: Gravity +
   link: https://www.gravity-conference.com/
   date: 4.-5. Apr 2019
   time:
   address: Ellington Hotel Berlin<br>Nürnberger Str. 50-55<br>10789 Berlin
+
+- title: JPoint
+  link: https://jpoint.ru/en/
+  date: 5.-6. Apr 2019
+  time:
+  address: WTC Congress Center<br>Krasnopresnenskaya nab., 12, 4th entrance<br>Moscow, Russia
 
 - title: Karrieremesse Schmalkalden
   link: https://www.karrieremesse-schmalkalden.de/
