--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -16,6 +16,12 @@
   time: '11:00 - 16:00'
   address: Hochschule Schmalkalden<br>Blechhammer 9<br>98574 Schmalkalden
 
+- title: ACE! 2019
+  link: https://aceconf.com/#!/home
+  date: 23.-24. May 2019
+  time:
+  address: Multikino<br>ul. Dobrego Pasterza 128<br>Kraków
+
 - title: Stellenwerk Jobmesse
   link: https://www.stellenwerk-jobmesse.de/hamburg/
   date: 4. Jun 2019
