Amend author text

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -193,7 +193,7 @@
 - id: gsanemeterio
   name: German
   full_name: German
-  description:  is a JavaScript Developer who is now into Ruby on Rails is a Ruby on Rails Developer. He is fond of video games and mangas, He love to learn new technologies and the new challenges
+  description:  is a JavaScript Developer who is now into Ruby on Rails. He is fond of video games, and mangas, as well as loves to learn new technologies.
   image: avatar_male.jpg
 
 - id: hahnert
