Add German to yml file

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -192,7 +192,7 @@
 
 - id: gsanemeterio
   name: German
-  full_name: German
+  full_name: German San Emeterio
   description:  is a JavaScript Developer who is now into Ruby on Rails. He is fond of video games, and mangas, as well as loves to learn new technologies.
   image: avatar_male.jpg
 
