--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,7 +1,7 @@
 - title: (Senior) Java Developer
   link: https://epages.com/en/career/?jh=2zr2s8sjxdwkvny4wmv8294nn0dc7j3
   description: As a Senior Java Developer based in Hamburg, you will be part of a tight-knit Scrum team working on a microservice-based architecture.
-  location: Hamburg / Jena
+  location: Hamburg / Jena / Barcelona
 
 - title: (Mid-level) JavaScript Engineer
   link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
@@ -18,7 +18,7 @@
   description: You will be responsible for assuring excellent quality and usability of our next generation ecommerce platform for SMBs.
   location: Hamburg
 
-- title: User Experience Manager
+- title: UX Expert
   link: https://epages.com/en/career/?jh=ljbhczh3vtlrfesk78wunm15ir4nqq9
   description: Based on the results from user research and usability tests you will develop use cases, workflows and wireframes.
   location: Hamburg
