--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,15 +1,3 @@
-- title: IT KoM
-  link: https://ai.fh-erfurt.de/en/itk/
-  date: 9. May 2019
-  time: '9:30 - 14:30'
-  address: FH Erfurt, Haus 8<br>Altonaer Straße 25<br>99085 Erfurt
-
-- title: Karrieremesse Schmalkalden
-  link: https://www.karrieremesse-schmalkalden.de/
-  date: 15. May 2019
-  time: '11:00 - 16:00'
-  address: Hochschule Schmalkalden<br>Blechhammer 9<br>98574 Schmalkalden
-
 - title: ACE! 2019
   link: https://aceconf.com/#!/home
   date: 23.-24. May 2019
@@ -33,6 +21,12 @@
   date: 5. Jun 2019
   time:
   address: Friedrich-Schiller-Universität Jena<br>Fürstengraben 1<br>07743 Jena
+
+- title: Hello World
+  link: https://www.eventbrite.de/e/hello-world-tickets-59947335093
+  date: 6. Jun 2019
+  time: '12:00 - 21:00'
+  address: PhraseApp office<br>ABC-Str. 4<br>20354 Hamburg
 
 - title: Firmenkontaktmesse FH Wedel
   link: https://www.fh-wedel.de/studieren/international/incomings/
