--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -34,6 +34,12 @@
   time:
   address: FH Wedel<br>Feldstraße 143<br>22880 Wedel
 
+- title: EuRuKo 2019
+  link: https://euruko2019.org/
+  date: 21.-22. Jun 2019
+  time:
+  address: ss Rotterdam<br>3E Katendrechtshoofd 25,<br>3072AM Rotterdam
+
 - title: Jobwalk Jena
   link: https://jena.jobwalk.city/
   date: 22. Jun 2019
