--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -42,8 +42,8 @@
     - title: Design & formatting
       link: beyond-essence/help-center/design-and-formatting.md
 
-    - title: Article structure
+    - title: Structure
       link: beyond-essence/help-center/article-structure.md
 
-    - title: Language peculiarities
+    - title: Crafting an article
       link: beyond-essence/help-center/language-peculiarities.md
