Review annotations Part II

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -43,7 +43,10 @@
       link: beyond-essence/help-center/design-and-formatting.md
 
     - title: Structure
-      link: beyond-essence/help-center/article-structure.md
+      link: beyond-essence/help-center/structure.md
 
     - title: Crafting an article
-      link: beyond-essence/help-center/language-peculiarities.md
+      link: beyond-essence/help-center/crafting-an-article.md
+
+    - title: Language characteristics
+      link: beyond-essence/help-center/language-characteristics.md
