--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -214,6 +214,12 @@
   description: is CTO at ePages, and shares the “bike2work” passion of many ePagees. He’s an ecommerce-addict, internet enthusiast, and Ruby/Docker evangelist.
   image: hbehrens.jpg
 
+- id: ikoutras
+  name: Ioannis
+  full_name: Ioannis Koutras
+  description: is a DevOps Engineer with a passion for automating all the things.
+  image: avatar_male.jpg
+
 - id: imolera
   name: Ivan
   full_name: Ivan
