Review annotations III

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -48,5 +48,5 @@
     - title: Crafting an article
       link: beyond-essence/help-center/crafting-an-article.md
 
-    - title: Language characteristics
-      link: beyond-essence/help-center/language-characteristics.md
+    - title: Internationalization
+      link: beyond-essence/help-center/internationalization.md
