--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -4,13 +4,13 @@
   location: Hamburg / Jena
 
 - title: (Senior) Java Developer
-  link: https://epages.com/de/karriere/?jh=r6guph7qxv3tltd57aha83e3a69k4fp
+  link: https://epages.com/en/career/?jh=r6guph7qxv3tltd57aha83e3a69k4fp
   description: Together with the teams in Hamburg and Jena you'll develop modules in Java and implement features for our new ecommerce platform.
   location: Barcelona
 
-- title: (Mid-level) JavaScript Engineer
-  link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
-  description: Support us building a highly user-centered web app that is easy to scale, to extend, and all modular in a responsive environment.
+- title: Scrum Master
+  link: https://epages.com/en/career/?jh=f9onabx9x5t890oxwhwvswmnp878hdh
+  description: Bring your knowledge of agile methods to supervise our Scrum teams with the objective to improve the development cycle.
   location: Hamburg / Jena
 
 - title: Software developer - ecommerce
