--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -11,7 +11,7 @@
 - title: Scrum Master
   link: https://epages.com/en/career/?jh=f9onabx9x5t890oxwhwvswmnp878hdh
   description: Bring your knowledge of agile methods to supervise our Scrum teams with the objective to improve the development cycle.
-  location: Hamburg / Jena
+  location: Hamburg
 
 - title: Software developer - ecommerce
   link: https://epages.com/en/career/?jh=3guijs41891ppdzqt0u0fhufovetyp7
@@ -23,7 +23,7 @@
   description: With your skills in Ruby, Rails, JavaScript, and PostgreSQL you are responsible for the development of our crucial in-house tools.
   location: Hamburg
 
-- title: UX Expert
-  link: https://epages.com/en/career/?jh=ljbhczh3vtlrfesk78wunm15ir4nqq9
-  description: Support our teams with your knowledge of Usability Engineering and UX to craft a great ecommerce experience for our merchants.
+- title: Working student / Intern
+  link: https://epages.com/en/career/?jh=1sn3k1tn7idyk1agbkk3n6dk706ht7m
+  description: Support our teams in setting up UI patterns and work closely together with UX, Design, and Technical Communication.
   location: Hamburg
