--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -2,13 +2,13 @@
   link: 
   date: 11. Sept 2019
   time:
-  address: ePages GbmH<br>Pilatuspool 2<br>20355 Hamburg
+  address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
 
 - title: ePages YOU
   link: 
   date: 12.-13. Sept 2019
   time:
-  address: ePages GbmH<br>Pilatuspool 2<br>20355 Hamburg
+  address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
 
 - title: SoCraTes
   link: https://www.socrates-conference.de/home
