Add links to post and fix & issue

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,11 +1,11 @@
-- title: ePages R&D Day
-  link: 
+- title: ePages R&amp;D Day
+  link: https://developer.epages.com/blog/events/rnd-day-2018/
   date: 11. Sept 2019
   time:
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
 
 - title: ePages YOU
-  link: 
+  link: https://developer.epages.com/blog/events/epages-you-our-annual-gathering-of-epagees/
   date: 12.-13. Sept 2019
   time:
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
