--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,3 +1,9 @@
+- title: SoCraTes
+  link: https://www.socrates-conference.de/home
+  date: 22.-25. Aug 2019
+  time:
+  address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
+
 - title: ePages R&amp;D Day
   link: https://developer.epages.com/blog/events/rnd-day-2018/
   date: 11. Sept 2019
@@ -10,11 +16,11 @@
   time:
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
 
-- title: SoCraTes
-  link: https://www.socrates-conference.de/home
-  date: 22.-25. Aug 2019
+- title: Ruby Russia
+  link: https://rubyrussia.club/
+  date: 28. Sept 2019
   time:
-  address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
+  address: Pokrovka Street 47<br>Moscow, Russia
 
 - title: Karrieremesse inovailmenau
   link: https://inova-ilmenau.de/inova/
