Add hackathon 2019 video to events

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -14,6 +14,6 @@
   image: rnd_2016_1.jpg
   video: https://www.youtube.com/watch?v=wNQ7B0rIB3g
 
-- title: Hackathon 2016
-  image: rnd_2016_2.jpg
-  video: https://www.youtube.com/watch?v=2UdyQma76IA
+- title: Hackathon 2019
+  image: hackathon_2019.png
+  video: https://www.youtube.com/watch?v=X9yMzNffUiE&t
