Fix youtube video link

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,6 @@
 - title: Hackathon 2019
   image: hackathon_2019.png
-  video: https://www.youtube.com/watch?v=X9yMzNffUiE&t
+  video: https://www.youtube.com/watch?v=X9yMzNffUiE
 
 - title: Hackathon 2018
   image: hackathon_2018.png
