Add hackathon 2019 video to events (#511)
* Add hackathon 2019 video to events
* Remove "Meet the team" and reorder videos
* Fix youtube video link

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,6 @@
-- title: Meet the team
-  image: meet-the-team.png
-  video: https://www.youtube.com/watch?v=FbE2FyqTJCY
+- title: Hackathon 2019
+  image: hackathon_2019.png
+  video: https://www.youtube.com/watch?v=X9yMzNffUiE
 
 - title: Hackathon 2018
   image: hackathon_2018.png
@@ -13,7 +13,3 @@
 - title: R&amp;D day 2016
   image: rnd_2016_1.jpg
   video: https://www.youtube.com/watch?v=wNQ7B0rIB3g
-
-- title: Hackathon 2016
-  image: rnd_2016_2.jpg
-  video: https://www.youtube.com/watch?v=2UdyQma76IA
