Add sidebar entry

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -31,6 +31,9 @@
     - title: Empty states
       link: beyond-essence/inventory/empty-states.md
 
+    - title: Input fields
+      link: beyond-essence/inventory/input-fields.md
+
     - title: Toggle switches
       link: beyond-essence/inventory/toggle-switches.md
 
