Add dropdowns to inventory

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -36,3 +36,6 @@
 
     - title: Toast messages
       link: beyond-essence/inventory/toast-messages.md
+
+    - title: Dropdowns
+      link: beyond-essence/inventory/dropdowns.md
