--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -34,6 +34,9 @@
     - title: Empty states
       link: beyond-essence/inventory/empty-states.md
 
+    - title: Ribbons
+      link: beyond-essence/inventory/ribbons.md
+
     - title: Toggle switches
       link: beyond-essence/inventory/toggle-switches.md
 
