--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -508,6 +508,12 @@
   description: is a Software Engineer who has accepted the challenges of build- and test automation. Also a proponent of Open Source software.
   image: thirsch.jpg
 
+- id: tulber
+  name: Torben
+  full_name: Torben Ulber
+  description: is a  Technical Support & QA Engineer who enjoys solving issues for customers and testing our software to maintain a high level of quality.
+  image: tulber.jpg
+
 - id: uabrisketa
   name: Unai A.
   full_name: Unai Abrisketa
