Configure rss feed

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ exclude:
   - firebase.json
 
 feed:
-  path: /blog/feed.xml
+  path: /feed.xml
 
 category_list:
   api-experience: API Experience
