AD-9381 Infinity blog post (#532)
* fix typo
* add blog post about Geb tests
* add torben to authors
* minor fixes
* add image of Spock
* changes after review
* minor text changes, change date, change spelling to AE
* change title placement
* added attribution for header image
* Change tags and make credits italic
* Adapt links and image according to blog conventions
* Make one sentence per line according to blog conventions

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -511,8 +511,14 @@
 - id: thirsch
   name: Thomas
   full_name: Thomas Hirsch
-  description: is a Software Engineer, who has accepted the challenges of build- and test automationn. Also a proponent of Open Source software.
+  description: is a Software Engineer who has accepted the challenges of build- and test automation. Also a proponent of Open Source software.
   image: thirsch.jpg
+
+- id: tulber
+  name: Torben
+  full_name: Torben Ulber
+  description: is a  Technical Support & QA Engineer who enjoys solving issues for customers and testing our software to maintain a high level of quality.
+  image: tulber.jpg
 
 - id: uabrisketa
   name: Unai A.
