--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,12 +1,12 @@
 - title: (Senior) Java Developer
   link: https://epages.com/en/career/?jh=2zr2s8sjxdwkvny4wmv8294nn0dc7j3
   description: Bring your knowledge of Java and Kotlin to work on a microservice architecture for our new ecommerce platform.
-  location: Hamburg / Jena
+  location: Hamburg
 
-- title: (Senior) Java Developer
-  link: https://epages.com/en/career/?jh=r6guph7qxv3tltd57aha83e3a69k4fp
-  description: Together with the teams in Hamburg and Jena you'll develop modules in Java and implement features for our new ecommerce platform.
-  location: Barcelona
+- title: Java Developer
+  link: https://epages.com/en/career/?jh=bo6dp88of7sn4vuj9cyn2k9vde0v1vh
+  description: Together with the counterpart team in Hamburg you'll develop modules in Java and implement features for our new ecommerce platform.
+  location: Jena
 
 - title: JavaScript Engineer
   link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
