--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -21,3 +21,15 @@
   date: 12.-13. Nov 2019
   time:
   address: Kulturbrauerei<br>Schönhauser Allee 36<br>10435 Berlin
+
+- title: dotCSS
+  link: https://www.dotcss.io/
+  date: 4. Dec 2019
+  time:
+  address: Dock Pullmann<br>87 Avenue des Magasins Généraux (Bâtiment 137)<br>93300 Aubervilliers
+
+- title: dotJS
+  link: https://www.dotjs.io/
+  date: 5.-6. Dec 2019
+  time:
+  address: Dock Pullmann<br>87 Avenue des Magasins Généraux (Bâtiment 137)<br>93300 Aubervilliers
