--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -382,6 +382,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_female.jpg
 
+- id: nsimu
+  name: Narcis
+  full_name: Narcis Simu
+  description: is a passionate software developer with intrests in API development and IoT.
+  image: avatar_male.jpg
+
 - id: nzolotova
   name: Natalia
   full_name: Natalia Zolotova
