code.talks conference. Manel additions

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -349,7 +349,7 @@
 - id: mmerino
   name: Manel
   full_name: Juan Manuel Merino
-  description: is a Software Engineer and Java enthusiast. He has a lot of experience in developing third-party connectors.
+  description: is a Software Engineer and Java/Kotlin enthusiast. He has a lot of experience in developing third-party connectors.
   image: mmerino.jpg
 
 - id: mriess
