--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -385,7 +385,7 @@
 - id: nsimu
   name: Narcis
   full_name: Narcis Simu
-  description: is a passionate software developer with intrests in API development and IoT.
+  description: is a passionate software developer with interests in API development and IoT.
   image: avatar_male.jpg
 
 - id: nzolotova
