--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,3 +1,9 @@
+- title: tcworld conference
+  link: https://tagungen.tekom.de/h19/tekom-jahrestagung-2019/
+  date: 12. Nov 2019
+  time:
+  address: ICS Messe Stuttgart<br>Messepiazza 1<br>70629 Stuttgart
+
 - title: codemotion
   link: https://events.codemotion.com/conferences/berlin/2019/
   date: 12.-13. Nov 2019
