--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -21,3 +21,9 @@
   date: 5.-6. Dec 2019
   time:
   address: Dock Pullmann<br>87 Avenue des Magasins Généraux (Bâtiment 137)<br>93300 Aubervilliers
+
+- title: Stellenwerk Job Fair
+  link: https://www.dotjs.io/
+  date: 16. Jun 2020
+  time:
+  address: Campus Universität Hamburg<br>Edmund-Siemers-Alle 1<br>20146 Hamburg
