Add blogpost for devoxx belgium (#569)
* Add dlika as author
* Add blogpost for devoxx belgium
* Fix test issues and make minor fixes on blog file
* Change publication date
* Add proof-read
* Some grammar & typos
* One line per sentence
* Adapt links
* Update authors file

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -148,6 +148,12 @@
   description: is an experienced Java developer. He has deep DevOps knowledge and a strong passion for Kubernetes and cloud technologies.
   image: djablonski.jpg
 
+- id: dlika
+  name: Donaldo
+  full_name: Donaldo Lika
+  description: is an experienced Java developer who is ambitious and always keeps up with the latest technology trends.
+  image: dlika.jpg
+
 - id: dmoran
   name: Declan
   full_name: Declan
