New post: dotCSS 2019

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -60,7 +60,7 @@
 
 - id: azwick
   name: Anne
-  full_name: Anne Zwick
+  full_name: Anne Debora Zimmermann
   description: is a Frontend Designer. She is keen on User Interface and Web Design, and loves to combine the art of design with the art of coding.
   image: azwick.jpg
 
