Add instagram icon into the footer

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ github_username: ePages-de
 youtube_username: UCI5hX9kgUGFnYpfxZYxlP0Q
 linkedin_username: epages
 xing_username: epagesgmbh
+instagram_username: epages_com
 
 markdown: kramdown
 
